Added move summaries, running, and catching Pokemon! Got rid of TextPane